ecerthing is working after setting footer a bit

--- a/catalog/view/theme/mycustomtheme/template/common/header.twig
+++ b/catalog/view/theme/mycustomtheme/template/common/header.twig
@@ -73,9 +73,10 @@
       {{ analytic }}
     {% endfor %}
   </head>
-  <body class="c-layout-header-fixed c-layout-header-mobile-fixed c-layout-header-fullscreen c-layout-header-topbar c-layout-header-topbar-collapse">
-    <!-- Jango Changes start of twitter bar -->
-    <header class="c-layout-header c-layout-header-default c-layout-header-dark-mobile c-header-transparent-dark" data-minimize-offset="80">
+  <body class="c-layout-header-fixed c-layout-header-mobile-fixed c-layout-header-fullscreen">
+        <!-- BEGIN: LAYOUT/HEADERS/HEADER-1 -->
+        <!-- BEGIN: HEADER -->
+        <header class="c-layout-header c-layout-header-2 c-layout-header-dark-mobile c-header-transparent-dark" data-minimize-offset="80">
       <div class="c-topbar c-topbar-dark">
         <div class="container">
           <!-- BEGIN: INLINE NAV -->
