removed useless things

--- a/catalog/view/theme/mycustomtheme/template/common/footer.twig
+++ b/catalog/view/theme/mycustomtheme/template/common/footer.twig
@@ -152,11 +152,11 @@
             </ul>
             <ul class="c-address">
               <li>
-              <i class="icon-pointer c-theme-font"></i> One Boulevard, Beverly Hills</li>
+              <i class="icon-pointer c-theme-font"></i> {{ address }}</li>
               <li>
-              <i class="icon-call-end c-theme-font"></i> +1800 1234 5678</li>
+              <i class="icon-call-end c-theme-font"></i> {{ telephone }}</li>
               <li>
-              <i class="icon-envelope c-theme-font"></i> email@example.com</li>
+              <i class="icon-envelope c-theme-font"></i> {{ email }}</li>
             </ul>
           </div>
         </div>
