breadcrum integrated at start og login

--- a/catalog/view/theme/mycustomtheme/template/common/home.twig
+++ b/catalog/view/theme/mycustomtheme/template/common/home.twig
@@ -1,5 +1,8 @@
 {{ header }}
 
+<body class="c-layout-header-fixed c-layout-header-mobile-fixed c-layout-header-fullscreen">
+        <!-- BEGIN: LAYOUT/HEADERS/HEADER-1 -->
+        <!-- BEGIN: HEADER -->
 <div class="c-layout-page">
     <!-- BEGIN: PAGE CONTENT -->
     <!-- BEGIN: LAYOUT/SLIDERS/SHOP-REVO-SLIDER-3 -->
@@ -445,6 +448,8 @@
         <!-- END: CONTENT/MISC/PROMO-1-1 -->
         <!-- END: PAGE CONTENT -->
     </div>
+</body>
 
 {{ footer }} 
+</html>
 
