--- a/catalog/view/theme/mycustomtheme/template/common/menu.twig
+++ b/catalog/view/theme/mycustomtheme/template/common/menu.twig
@@ -75,7 +75,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="javascript:;" data-toggle="modal" data-target="#login-form" class="c-btn-border-opacity-04 c-btn btn-no-focus c-btn-header btn btn-sm c-btn-border-1x c-btn-white c-btn-circle c-btn-uppercase c-btn-sbold">
+                                    <a href="{{ login }}" class="c-btn-border-opacity-04 c-btn btn-no-focus c-btn-header btn btn-sm c-btn-border-1x c-btn-white c-btn-circle c-btn-uppercase c-btn-sbold">
                                         <i class="icon-user"></i> Sign In</a>
                                 </li>
                                 <li class="c-quick-sidebar-toggler-wrapper">
