login and featured integrated

--- a/catalog/view/theme/mycustomtheme/template/common/footer.twig
+++ b/catalog/view/theme/mycustomtheme/template/common/footer.twig
@@ -1,3 +1,5 @@
+                            
+</body>
 <a name="footer"></a>
 <footer class="c-layout-footer c-layout-footer-3 c-bg-dark">
   <div class="c-prefooter">
@@ -273,3 +275,5 @@ hideThumbsUnderResolution: 0
 </script>
 <!-- END: PAGE SCRIPTS -->
 <!-- END: LAYOUT/BASE/BOTTOM -->
+
+</html>
