--- a/catalog/view/theme/mycustomtheme/template/common/home.twig
+++ b/catalog/view/theme/mycustomtheme/template/common/home.twig
@@ -1,7 +1,5 @@
 {{ header }}
-
-<body class="c-layout-header-fixed c-layout-header-mobile-fixed c-layout-header-fullscreen">
-        <!-- BEGIN: LAYOUT/HEADERS/HEADER-1 -->
+      <!-- BEGIN: LAYOUT/HEADERS/HEADER-1 -->
         <!-- BEGIN: HEADER -->
 <div class="c-layout-page">
     <!-- BEGIN: PAGE CONTENT -->
@@ -448,8 +446,10 @@
         <!-- END: CONTENT/MISC/PROMO-1-1 -->
         <!-- END: PAGE CONTENT -->
     </div>
-</body>
 
+
+    <div id="content" class="{{ class }}">{{ content_top }}{{ content_bottom }}</div>
+    {{ column_right }}</div>
 {{ footer }} 
-</html>
+
 
