--- a/catalog/view/theme/mycustomtheme/template/account/login.twig
+++ b/catalog/view/theme/mycustomtheme/template/account/login.twig
@@ -1,76 +1,173 @@
 {{ header }}
-
-<body class="c-layout-header-fixed c-layout-header-mobile-fixed c-layout-header-fullscreen">
-        <!-- BEGIN: LAYOUT/HEADERS/HEADER-1 -->
-        <!-- BEGIN: HEADER -->
+<!-- BEGIN: LAYOUT/HEADERS/HEADER-1 -->
+<!-- BEGIN: HEADER -->
 <div class="c-layout-page" style ="margin-top:175px">
-<div class="c-layout-breadcrumbs-1 c-fonts-uppercase c-fonts-bold c-bordered c-bordered-both" style = "margin-bottom:25px">
-  <div class="container">
-    <div class="c-page-title c-pull-left">
-      <h3 class="c-font-uppercase c-font-sbold">breadcrumbs - Default</h3>
-    </div>
-    <ul class="c-page-breadcrumbs c-theme-nav c-pull-right c-fonts-regular">
-      {% for breadcrumb in breadcrumbs %}
-        <li><a href="{{ breadcrumb.href }}">{{ breadcrumb.text }}</a></li>
-                                <li>/</li>
-      {% endfor %}
-    </ul>
-  </div>
-</div>
-<div id="account-login" class="container">
-  <ul class="breadcrumb">
-    {% for breadcrumb in breadcrumbs %}
-    <li><a href="{{ breadcrumb.href }}">{{ breadcrumb.text }}</a></li>
-    {% endfor %}
-  </ul>
-  {% if success %}
-  <div class="alert alert-success alert-dismissible"><i class="fa fa-check-circle"></i> {{ success }}</div>
-  {% endif %}
-  {% if error_warning %}
-  <div class="alert alert-danger alert-dismissible"><i class="fa fa-exclamation-circle"></i> {{ error_warning }}</div>
-  {% endif %}
-  <div class="row">{{ column_left }}
-    {% if column_left and column_right %}
-    {% set class = 'col-sm-6' %}
-    {% elseif column_left or column_right %}
-    {% set class = 'col-sm-9' %}
-    {% else %}
-    {% set class = 'col-sm-12' %}
-    {% endif %}
-    <div id="content" class="{{ class }}">{{ content_top }}
-      <div class="row">
-        <div class="col-sm-6">
-          <div class="well">
-            <h2>{{ text_new_customer }}</h2>
-            <p><strong>{{ text_register }}</strong></p>
-            <p>{{ text_register_account }}</p>
-            <a href="{{ register }}" class="btn btn-primary">{{ button_continue }}</a></div>
-        </div>
-        <div class="col-sm-6">
-          <div class="well">
-            <h2>{{ text_returning_customer }}</h2>
-            <p><strong>{{ text_i_am_returning_customer }}</strong></p>
-            <form action="{{ action }}" method="post" enctype="multipart/form-data">
-              <div class="form-group">
-                <label class="control-label" for="input-email">{{ entry_email }}</label>
-                <input type="text" name="email" value="{{ email }}" placeholder="{{ entry_email }}" id="input-email" class="form-control" />
-              </div>
-              <div class="form-group">
-                <label class="control-label" for="input-password">{{ entry_password }}</label>
-                <input type="password" name="password" value="{{ password }}" placeholder="{{ entry_password }}" id="input-password" class="form-control" />
-                <a href="{{ forgotten }}">{{ text_forgotten }}</a></div>
-              <input type="submit" value="{{ button_login }}" class="btn btn-primary" />
-              {% if redirect %}
-              <input type="hidden" name="redirect" value="{{ redirect }}" />
-              {% endif %}
-            </form>
-          </div>
-        </div>
+  <div class="c-layout-breadcrumbs-1 c-fonts-uppercase c-fonts-bold c-bordered c-bordered-both" style = "margin-bottom:25px">
+    <div class="container">
+      <div class="c-page-title c-pull-left">
+        <h3 class="c-font-uppercase c-font-sbold">breadcrumbs - Default</h3>
       </div>
-      {{ content_bottom }}</div>
-    {{ column_right }}</div>
-</div>
-
-</div>
-</body>
-{{ footer }}
+      <ul class="c-page-breadcrumbs c-theme-nav c-pull-right c-fonts-regular">
+        {% for breadcrumb in breadcrumbs %}
+          <li><a href="{{ breadcrumb.href }}">{{ breadcrumb.text }}</a></li>
+          <li>/</li>
+        {% endfor %}
+      </ul>
+    </div>
+  </div>
+  <div id="account-login" class="container">
+    {% if success %}
+      <div class="alert alert-success alert-dismissible"><i class="fa fa-check-circle"></i> {{ success }}</div>
+    {% endif %}
+    {% if error_warning %}
+      <div class="alert alert-danger alert-dismissible"><i class="fa fa-exclamation-circle"></i> {{ error_warning }}</div>
+    {% endif %}
+    <div class="row">{{ column_left }}
+      {% if column_left and column_right %}
+        {% set class = 'col-sm-6' %}
+      {% elseif column_left or column_right %}
+        {% set class = 'col-sm-9' %}
+      {% else %}
+        {% set class = 'col-sm-12' %}
+      {% endif %}
+      </div>
+      <div class="c-content-box c-size-md c-bg-white">
+        <div class="container">
+          <div class="c-shop-login-register-1">
+            <div class="row">
+              <div class="col-md-6">
+                <div class="panel panel-default c-panel">
+                  <div class="panel-body c-panel-body">
+                    <form class="c-form-login" action="{{ action }}" method="post" enctype="multipart/form-data">
+                      <div class="form-group has-feedback">
+                        <label class="control-label" for="input-email">{{ entry_email }}</label>
+                        <input type="text" name="email" value="{{ email }}" placeholder="{{ entry_email }}" id="input-email" class="form-control c-square c-theme input-lg" />
+                        <span class="glyphicon glyphicon-user form-control-feedback c-font-grey"></span>
+                      </div>
+                      <div class="form-group has-feedback">
+                        <label class="control-label" for="input-password">{{ entry_password }}</label>
+                        <input type="password" name="password" value="{{ password }}" placeholder="{{ entry_password }}" id="input-password" class="form-control c-square c-theme input-lg" />
+                        <span class="glyphicon glyphicon-lock form-control-feedback c-font-grey"></span>
+                      </div>
+                      <div class="row c-margin-t-40">
+                        <div class="col-xs-8">
+                          <div class="c-checkbox">
+                            <a href="{{ forgotten }}">{{ text_forgotten }}</a>
+                          </div>
+                        </div>
+                        <div class="col-xs-4">
+                          <button type="submit" value="{{ button_login }}" class="pull-right btn btn-lg c-theme-btn c-btn-square c-btn-uppercase c-btn-bold">Login</button>
+                        </div>
+                      </div>
+                    </form>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="panel panel-default c-panel">
+                  <div class="panel-body c-panel-body">
+                    <div class="c-content-title-1">
+                      <h3 class="c-left">
+                      <i class="icon-user"></i> Don't have an account yet?</h3>
+                      <div class="c-line-left c-theme-bg"></div>
+                      <p>Join us and enjoy shopping online today.</p>
+                    </div>
+                    <div class="c-margin-fix">
+                      <div class="c-checkbox c-toggle-hide" data-object-selector="c-form-register" data-animation-speed="600">
+                        <input type="checkbox" id="checkbox6-444" class="c-check">
+                        <br/>
+                        <br/>
+                        <br/>
+                        <a href="{{ register }}" class="btn btn-primary pull-right btn btn-lg c-theme-btn c-btn-square c-btn-uppercase c-btn-bold">Register</a>
+                      </div>
+                    </div>
+                    <form class="c-form-register c-margin-t-20">
+                      <div class="form-group">
+                        <label class="control-label">Country</label>
+                        <select class="form-control c-square c-theme">
+                          <option value="1">Malaysia</option>
+                          <option value="2">Singapore</option>
+                          <option value="3">Indonesia</option>
+                          <option value="4">Thailand</option>
+                          <option value="5">China</option>
+                        </select>
+                      </div>
+                      <div class="form-group">
+                        <div class="row">
+                          <div class="col-md-6">
+                            <label class="control-label">First Name</label>
+                            <input type="text" class="form-control c-square c-theme" placeholder="First Name"> </div>
+                            <div class="col-md-6">
+                              <label class="control-label">Last Name</label>
+                              <input type="text" class="form-control c-square c-theme" placeholder="Last Name"> </div>
+                            </div>
+                          </div>
+                          <div class="form-group">
+                            <label class="control-label">Address</label>
+                            <input type="text" class="form-control c-square c-theme" placeholder="Street Address"> </div>
+                            <div class="form-group">
+                              <input type="text" class="form-control c-square c-theme" placeholder="Apartment, suite, unit etc. (optional)"> </div>
+                              <div class="form-group">
+                                <label class="control-label">Town / City</label>
+                                <input type="text" class="form-control c-square c-theme" placeholder="Town / City"> </div>
+                                <div class="row">
+                                  <div class="form-group col-md-6">
+                                    <label class="control-label">State / County</label>
+                                    <select class="form-control c-square c-theme">
+                                      <option value="0">Select an option...</option>
+                                      <option value="1">Malaysia</option>
+                                      <option value="2">Singapore</option>
+                                      <option value="3">Indonesia</option>
+                                      <option value="4">Thailand</option>
+                                      <option value="5">China</option>
+                                    </select>
+                                  </div>
+                                  <div class="col-md-6">
+                                    <label class="control-label">Postcode / Zip</label>
+                                    <input type="text" class="form-control c-square c-theme" placeholder="Postcode / Zip"> </div>
+                                  </div>
+                                  <div class="row">
+                                    <div class="form-group col-md-6">
+                                      <label class="control-label">Email Address</label>
+                                      <input type="email" class="form-control c-square c-theme" placeholder="Email Address"> </div>
+                                      <div class="col-md-6">
+                                        <label class="control-label">Phone</label>
+                                        <input type="tel" class="form-control c-square c-theme" placeholder="Phone"> </div>
+                                      </div>
+                                      <div class="form-group">
+                                        <label class="control-label">Account Password</label>
+                                        <input type="password" class="form-control c-square c-theme" placeholder="Password"> </div>
+                                        <div class="form-group c-margin-t-40">
+                                          <button type="submit" class="btn btn-lg c-theme-btn c-btn-square c-btn-uppercase c-btn-bold">Register</button>
+                                        </div>
+                                      </form>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+                              <div class="row">
+                                <div class="col-md-12">
+                                  <div class="list-unstyled c-bs-grid-small-space">
+                                    <div class="row">
+                                      <div class="col-md-4 col-sm-4 c-margin-t-10">
+                                        <a class="btn btn-block btn-social c-btn-square c-btn-uppercase btn-md btn-twitter">
+                                        <i class="fa fa-twitter"></i> Sign in with Twitter </a>
+                                      </div>
+                                      <div class="col-md-4 col-sm-4 c-margin-t-10">
+                                        <a class="btn btn-block btn-social c-btn-square c-btn-uppercase btn-md btn-facebook">
+                                        <i class="fa fa-facebook"></i> Sign in with Facebook </a>
+                                      </div>
+                                      <div class="col-md-4 col-sm-4 c-margin-t-10">
+                                        <a class="btn btn-block btn-social c-btn-square c-btn-uppercase btn-md btn-google">
+                                        <i class="fa fa-google-plus"></i> Sign in with Google </a>
+                                      </div>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        <!-- END: CONTENT/SHOPS/SHOP-LOGIN-REGISTER-1 -->
+                      </div>
+                      {{ footer }}
